tests/semantic_errors/err09_incompatible_types_assign.java
public class Error09 {
    public static void main(String[] args) {
        int x;
        boolean b;
        b = true;
        x = b; // Error: Incompatible types in assignment
    }
}
